--- a/source/index.html
+++ b/source/index.html
@@ -6,57 +6,56 @@
   </head>
   <body class="page__body">
     <!-- ------ Header ------  -->
-    <header class="main-header">
+    <header class="header">
       <!-- ------ Навигация ------ -->
-      <nav class="main-navigation main-navigation-wrapper">
-        <a class="main-navigation__logo">
-          <img src="img/logos/logo-simple-picture.svg" alt="Кэт энерджи.">
+      <nav class="header__navigation navigation">
+        <a class="navigation__logo">
+          <img src="img/logos/logo-simple-picture.svg" alt="Кэт энерджи." width="33" height="37">
         </a>
-        <a class="main-navigation__logo-title">
+        <a class="navigation__logo-title">
           <img src="img/logos/logo-simple-title.svg" alt="">
         </a>
-        <button class="main-navigation__toggle" type="button">
+        <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
-        <ul class="main-navigation__list">
-          <li class="main-navigation__item main-navigation__item--current">
-            <a class="main-navigation__link">Главная</a>
+        <ul class="navigation__list">
+          <li class="navigation__item navigation__item--current">
+            <a class="navigation__link">Главная</a>
           </li>
-          <li class="main-navigation__item">
-            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+          <li class="navigation__item">
+            <a class="navigation__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-navigation__item">
-            <a class="main-navigation__link" href="form.html">Подбор программы</a>
+          <li class="navigation__item">
+            <a class="navigation__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
 
       <!-- ------ Промо-блок ------ -->
-      <div class="main-header__promo main-header__promo--main-page main-header__promo--minimal promo">
-        <p class="main-header__promo-title">Функциональное<br>
-          питание для котов</p>
-        <p class="main-header__promo-tagline">Занялся собой? Займись котом!</p>
-        <a class="main-header__promo-link button" href="form.html">Подобрать программу</a>
+      <div class="header__promo promo">
+        <h1 class="promo__title">Функциональное<br>
+          питание для котов</h1>
+        <p class="promo__tagline">Занялся собой? Займись котом!</p>
+        <a class="promo__link button" href="form.html">Подобрать программу</a>
       </div>
     </header>
 
     <!-- ------ Главная часть ------ -->
-    <main class="main-container">
-      <h1 class="visually-hidden">Кэт энерджи - функциональное питание для котов.</h1>
+    <main class="main">
       <!-- ------ Блок: Выбор Программы ------ -->
       <section class="program-selection">
+        <h2 class="visually-hidden">Выбор программы.</h2>
         <div class="program-selection__wrapper">
-          <h2 class="visually-hidden">Выбор программы.</h2>
           <ul class="program-selection__list">
             <li class="program-selection__item">
               <h3 class="program-selection__title program-selection__title--weight-loss">Похудение</h3>
 
               <p class="program-selection__description">
-                Ваш кот весит больше собаки и<br>
-                почти утратил способность лазить<br>
-                по деревьям? Пора на диету! Cat<br>
-                Energy Slim поможет вашему<br>
+                Ваш кот весит больше собаки и
+                почти утратил способность лазить
+                по деревьям? Пора на диету! Cat
+                Energy Slim поможет вашему
                 питомцу сбросить лишний вес.
               </p>
               <a class="program-selection__link" href="#">Каталог Slim</a>
@@ -65,10 +64,10 @@
             <li class="program-selection__item">
               <h3 class="program-selection__title program-selection__title--weight-gain">Набор массы</h3>
               <p class="program-selection__description">
-                Заработать авторитет среди<br>
-                дворовых котов и даже собак?<br>
-                Серия Cat Energy Pro поможет<br>
-                вашему коту нарастить<br>
+                Заработать авторитет среди
+                дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет
+                вашему коту нарастить
                 необходимые мышцы!
               </p>
               <a class="program-selection__link" href="#">Каталог Pro</a>
@@ -79,27 +78,27 @@
 
       <!-- ------ Блок: Как это работает ------ -->
       <section class="about-product">
+        <h2 class="main__title-secondary">Как это работает</h2>
         <div class="about-product__wrapper">
-          <h2 class="about-product__title header-second">Как это работает</h2>
           <ul class="about-product__list">
             <li class="about-product__item about-product__item--useful">
-              Функциональное питание<br>
-              содержит только полезные<br>
+              Функциональное питание
+              содержит только полезные
               питательные вещества.
             </li>
             <li class="about-product__item about-product__item--form">
-              Выпускается в виде порошка,<br>
-              который нужно лишь залить<br>
+              Выпускается в виде порошка,
+              который нужно лишь залить
               кипятком и готово.
             </li>
             <li class="about-product__item about-product__item--dose">
-              Замените один-два приема<br>
-              обычной еды на наше<br>
+              Замените один-два приема
+              обычной еды на наше
               функциональное питание.
             </li>
             <li class="about-product__item about-product__item--result">
-              Уже через месяц<br>
-              наслаждайтесь изменениями<br>
+              Уже через месяц
+              наслаждайтесь изменениями
               к лучшему вашего питомца!
             </li>
           </ul>
@@ -108,21 +107,21 @@
 
       <!-- ------ Блок: Живой пример ------ -->
       <section class="use-case">
+        <h2 class="main__title-secondary">Живой пример</h2>
         <div class="use-case__wrapper">
-          <h2 class="use-case__title header-second">Живой пример</h2>
           <p class="use-case__description">
-            Борис сбросил 5 кг за 2 месяца, просто<br>
-            заменив свой обычный корм на Cat Energy<br>
-            Slim. Отличный результат без изнуряющих<br>
-            тренировок! При этом он не менял своих<br>
-            привычек и по-прежнему спит по 16 часов<br>
+            Борис сбросил 5 кг за 2 месяца, просто
+            заменив свой обычный корм на Cat Energy
+            Slim. Отличный результат без изнуряющих
+            тренировок! При этом он не менял своих
+            привычек и по-прежнему спит по 16 часов
             в день.
           </p>
           <dl class="use-case__details">
-            <dt class="use-case__details-number">5 кг</dt>
-            <dd class="use-case__details-description">снижение веса</dd>
-            <dt class="use-case__details-number">60 дней</dt>
-            <dd class="use-case__details-description">затрачено времени</dd>
+            <dt class="use-case__details-number">снижение веса</dt>
+            <dd class="use-case__details-description">5 кг</dd>
+            <dt class="use-case__details-number">затрачено времени</dt>
+            <dd class="use-case__details-description">60 дней</dd>
           </dl>
           <p class="use-case__total-cost">Затраты на питание: 15 000 руб.</p>
 
@@ -136,7 +135,7 @@
             </div>
             <div class="use-case__controls-container results-slider__controls-container">
               <span class="use-case__control-label results-slider__control-label-before">Было</span>
-              <input class="use-case__slider use-case__slider--minimal results-slider__slider results-slider__slider--minimal" type="range" min="0" max="100" value="0">
+              <input class="use-case__slider results-slider__slider" type="range" min="0" max="100" value="0">
               <span class="use-case__control-label results-slider__control-label-after">Стало</span>
             </div>
           </div>
@@ -145,10 +144,10 @@
     </main>
 
     <!-- ------ Footer ------ -->
-    <footer class="main-footer">
-      <div class="main-footer__wrapper">
+    <footer class="footer">
+      <div class="footer__wrapper">
         <!-- ------ Адрес ------ -->
-        <section class="main-footer__contacts contacts">
+        <section class="footer__contacts contacts">
           <h2 class="visually-hidden">Наш адрес.</h2>
           <div class="contacts__address">
             <p class="contacts__invitation">
@@ -169,45 +168,41 @@
           </div>
         </section>
 
-        <div class="main-footer__logo">
-          <a class="main-footer__logo-link">
+        <div class="footer__logo">
+          <a class="footer__logo-link">
             <img src="img/logos/logo-simple-title.svg" alt="Кэт энерджи.">
           </a>
         </div>
 
         <!-- ------ Соцсети ------ -->
-        <section class="main-footer__social social">
+        <section class="footer__social">
           <h2 class="visually-hidden">Мы в соцсетях.</h2>
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Мы в Вконтакте.</span>
-                <svg class="social__logo" width="27" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 2.34C0 1.48.52 1.02 1.55.96l3.97.02c.26 0 .44.13.53.38.4 1.26.86 2.34 1.37 3.25.5.92 1.17 1.97 1.99 3.16.07.15.18.23.34.23.13 0 .22-.06.3-.18l.07-.28.03-4.35c0-.3-.07-.5-.23-.6-.15-.1-.43-.18-.83-.23-.32-.05-.48-.23-.48-.55 0-.07 0-.12.02-.15C9.01.57 10.07.03 11.83.03l1.5-.03C14 0 14.55.16 15 .48c.44.32.67.82.67 1.5V7.7c.12.08.24.12.34.12.27 0 .5-.15.7-.45 1.95-2.58 3-4.31 3.17-5.18 0-.02.01-.06.05-.13.12-.25.33-.47.61-.65.29-.19.53-.31.75-.38a.55.55 0 0 1 .24-.05h4.13l.26.03c.36 0 .63.16.83.47.07.1.12.21.15.33a2.4 2.4 0 0 1 .06.55v.18a6.11 6.11 0 0 1-.94 2.2c-.5.78-1.15 1.62-1.93 2.53-.79.9-1.27 1.5-1.47 1.78-.16.2-.24.39-.24.56 0 .13.07.28.21.45l3.9 4.63c.2.26.31.56.31.88 0 .38-.16.7-.48.95-.32.25-.7.4-1.14.43l-.46.02h-4.04c-.02 0-.06 0-.11.02a.86.86 0 0 1-.1.01c-.4 0-.76-.16-1.1-.48-.12-.13-.96-1.12-2.5-2.97a1.39 1.39 0 0 0-.38-.32 38.47 38.47 0 0 0-.53 2.24l-.08.42a1.4 1.4 0 0 1-1.12 1.06l-.37.02h-2.61c-1.48 0-2.95-.63-4.41-1.9a19.3 19.3 0 0 1-3.96-4.95A47.51 47.51 0 0 1 .13 3.07 1.92 1.92 0 0 1 0 2.34Zm16.01 6.51c-.37 0-.7-.1-1.01-.29a.9.9 0 0 1-.45-.79V2c0-.34-.1-.58-.27-.72-.18-.14-.49-.21-.93-.21l-1.52.05c-.76 0-1.34.12-1.73.37.78.36 1.17.93 1.17 1.71v4.43a1.5 1.5 0 0 1-.53 1.04c-.32.28-.68.42-1.07.42-.53 0-.94-.24-1.22-.73a26.16 26.16 0 0 1-3.1-5.63l-.23-.66-3.55-.02c-.23 0-.36.01-.38.03-.03.03-.04.1-.04.22 0 .15.01.3.05.48l.56 1.4c1.49 3.64 3.11 6.51 4.86 8.6 1.75 2.1 3.47 3.15 5.16 3.15h2.66c.1 0 .19-.03.24-.09.05-.06.1-.17.13-.34l.06-.25.5-2.21c.15-.3.27-.5.38-.6.2-.2.42-.28.69-.28.43 0 .86.24 1.3.73l2.27 2.71c.14.22.3.33.45.33h4.4c.53 0 .8-.13.8-.38a.47.47 0 0 0-.08-.25l-3.87-4.55c-.3-.35-.45-.73-.45-1.13 0-.4.14-.8.43-1.16.23-.34.68-.9 1.34-1.67.67-.78 1.25-1.51 1.75-2.19.5-.68.82-1.3.98-1.85l.08-.33a.37.37 0 0 1-.02-.16c0-.07-.01-.14-.03-.19h-4.18c-.27.1-.48.25-.64.45L20.8 3c-.45 1.16-1.6 2.94-3.5 5.36-.36.33-.8.5-1.3.5Z" fill="#666"/>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Мы в Ютубе.</span>
-                <svg class="social__logo" width="28" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="m17.85 10.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V9.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C20.22 1.98 14.25 2 14 2s-6.22-.02-9.94 1.4a2.4 2.4 0 0 0-1.45 1.64 25.32 25.32 0 0 0-.61 6.3c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C8.03 3.29 13.93 3.3 14 3.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z" fill="#666"/>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Мы в Телеграме.</span>
-                <svg class="social__logo" width="28" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M23.46 3.15c.18.15.27.38.23.61l-2.63 15.76a.66.66 0 0 1-1.01.44l-7.88-5.25a.66.66 0 0 1-.15-.96l2.61-3.26-4.36 2.9a.66.66 0 0 1-.65.05L4.36 10.8a.66.66 0 0 1 .08-1.2l18.38-6.57a.66.66 0 0 1 .64.11ZM6.33 10.32l3.53 1.77 7.56-5.04a.66.66 0 0 1 .88.96l-4.8 6 6.43 4.3 2.28-13.66-15.88 5.67Z" fill="#666"/>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="footer__social-list">
+            <a class="footer__social-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в Вконтакте.</span>
+              <svg class="footer__social-logo" width="27" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 2.34C0 1.48.52 1.02 1.55.96l3.97.02c.26 0 .44.13.53.38.4 1.26.86 2.34 1.37 3.25.5.92 1.17 1.97 1.99 3.16.07.15.18.23.34.23.13 0 .22-.06.3-.18l.07-.28.03-4.35c0-.3-.07-.5-.23-.6-.15-.1-.43-.18-.83-.23-.32-.05-.48-.23-.48-.55 0-.07 0-.12.02-.15C9.01.57 10.07.03 11.83.03l1.5-.03C14 0 14.55.16 15 .48c.44.32.67.82.67 1.5V7.7c.12.08.24.12.34.12.27 0 .5-.15.7-.45 1.95-2.58 3-4.31 3.17-5.18 0-.02.01-.06.05-.13.12-.25.33-.47.61-.65.29-.19.53-.31.75-.38a.55.55 0 0 1 .24-.05h4.13l.26.03c.36 0 .63.16.83.47.07.1.12.21.15.33a2.4 2.4 0 0 1 .06.55v.18a6.11 6.11 0 0 1-.94 2.2c-.5.78-1.15 1.62-1.93 2.53-.79.9-1.27 1.5-1.47 1.78-.16.2-.24.39-.24.56 0 .13.07.28.21.45l3.9 4.63c.2.26.31.56.31.88 0 .38-.16.7-.48.95-.32.25-.7.4-1.14.43l-.46.02h-4.04c-.02 0-.06 0-.11.02a.86.86 0 0 1-.1.01c-.4 0-.76-.16-1.1-.48-.12-.13-.96-1.12-2.5-2.97a1.39 1.39 0 0 0-.38-.32 38.47 38.47 0 0 0-.53 2.24l-.08.42a1.4 1.4 0 0 1-1.12 1.06l-.37.02h-2.61c-1.48 0-2.95-.63-4.41-1.9a19.3 19.3 0 0 1-3.96-4.95A47.51 47.51 0 0 1 .13 3.07 1.92 1.92 0 0 1 0 2.34Zm16.01 6.51c-.37 0-.7-.1-1.01-.29a.9.9 0 0 1-.45-.79V2c0-.34-.1-.58-.27-.72-.18-.14-.49-.21-.93-.21l-1.52.05c-.76 0-1.34.12-1.73.37.78.36 1.17.93 1.17 1.71v4.43a1.5 1.5 0 0 1-.53 1.04c-.32.28-.68.42-1.07.42-.53 0-.94-.24-1.22-.73a26.16 26.16 0 0 1-3.1-5.63l-.23-.66-3.55-.02c-.23 0-.36.01-.38.03-.03.03-.04.1-.04.22 0 .15.01.3.05.48l.56 1.4c1.49 3.64 3.11 6.51 4.86 8.6 1.75 2.1 3.47 3.15 5.16 3.15h2.66c.1 0 .19-.03.24-.09.05-.06.1-.17.13-.34l.06-.25.5-2.21c.15-.3.27-.5.38-.6.2-.2.42-.28.69-.28.43 0 .86.24 1.3.73l2.27 2.71c.14.22.3.33.45.33h4.4c.53 0 .8-.13.8-.38a.47.47 0 0 0-.08-.25l-3.87-4.55c-.3-.35-.45-.73-.45-1.13 0-.4.14-.8.43-1.16.23-.34.68-.9 1.34-1.67.67-.78 1.25-1.51 1.75-2.19.5-.68.82-1.3.98-1.85l.08-.33a.37.37 0 0 1-.02-.16c0-.07-.01-.14-.03-.19h-4.18c-.27.1-.48.25-.64.45L20.8 3c-.45 1.16-1.6 2.94-3.5 5.36-.36.33-.8.5-1.3.5Z" fill="#666"/>
+              </svg>
+            </a>
+
+            <a class="footer__social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Мы в Ютубе.</span>
+              <svg class="footer__social-logo" width="28" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="m17.85 10.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V9.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C20.22 1.98 14.25 2 14 2s-6.22-.02-9.94 1.4a2.4 2.4 0 0 0-1.45 1.64 25.32 25.32 0 0 0-.61 6.3c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C8.03 3.29 13.93 3.3 14 3.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z" fill="#666"/>
+              </svg>
+            </a>
+
+            <a class="footer__social-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Мы в Телеграме.</span>
+              <svg class="footer__social-logo" width="28" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M23.46 3.15c.18.15.27.38.23.61l-2.63 15.76a.66.66 0 0 1-1.01.44l-7.88-5.25a.66.66 0 0 1-.15-.96l2.61-3.26-4.36 2.9a.66.66 0 0 1-.65.05L4.36 10.8a.66.66 0 0 1 .08-1.2l18.38-6.57a.66.66 0 0 1 .64.11ZM6.33 10.32l3.53 1.77 7.56-5.04a.66.66 0 0 1 .88.96l-4.8 6 6.43 4.3 2.28-13.66-15.88 5.67Z" fill="#666"/>
+              </svg>
+            </a>
+          </div>
         </section>
 
         <!-- ------ Copyright ------ -->
-        <section class="main-footer__copyright copyright">
+        <section class="footer__copyright copyright">
           <h2 class="visually-hidden">Разработано.</h2>
           <a class="copyright__link-title" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           <a class="copyright__link-logo" href="https://htmlacademy.ru/intensive/adaptive">
