Добавляет базовую стилизацию для страницы с формой

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,7 @@
     <!-- ------ Главная часть ------ -->
     <main class="main">
       <section class="catalog">
-        <h1 class="main__title">Подбор программы</h1>
+        <h1 class="main__title">Каталог продукции</h1>
 
         <!-- Карточка товара -->
         <article class="catalog__product-card">
