--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
           программу питания для вашего кота
         </p>
         <form class="program-selection__form form" action="https://echo.htmlacademy.ru/" method="post">
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--pet">
             <legend class="visually-hidden">Данные о питомце.</legend>
             <div class="form__field-group">
               <label class="form__label" for="pet-name">Имя:*</label>
@@ -52,7 +52,7 @@
             </div>
             <div class="form__field-group">
               <label class="form__label" for="pet-weight">Вес (кг):*</label>
-              <input class="form__text" type="number" id="pet-name" name="pet-name" placeholder="7" required>
+              <input class="form__number" type="number" id="pet-weight" name="pet-weight" placeholder="7" required>
             </div>
             <div class="form__field-group">
               <label class="form__label" for="pet-age">Возраст (лет):</label>
@@ -60,7 +60,7 @@
             </div>
           </fieldset>
 
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--target">
             <legend class="visually-hidden">Цель программы.</legend>
             <ul class="form__list">
               <li class="form__item">
@@ -84,7 +84,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--contacts">
             <legend class="form__legend page-title-secondary">Контактные данные<br>(владельца кота)</legend>
             <div class="form__field-group">
               <label class="form__label" for="email">E-mail:*</label>
@@ -96,12 +96,12 @@
             </div>
           </fieldset>
 
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--comment">
             <legend class="form__legend page-title-secondary">Комментарий</legend>
             <textarea class="form__textarea" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
           </fieldset>
 
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--addition">
             <legend class="form__legend page-title-secondary">Дополнительно</legend>
             <ul class="form__list">
               <li class="form__item">
@@ -131,7 +131,9 @@
             </ul>
           </fieldset>
 
-          <button class="form__button button" type="submit">Отправить заявку</button>
+          <div class="form__button">
+            <button class="button" type="submit">Отправить заявку</button>
+          </div>
 
           <p class="form__explanation">* — Обязательные поля</p>
         </form>
@@ -140,35 +142,34 @@
 
     <!-- ------ Footer ------ -->
     <footer class="footer">
-      <div class="footer__wrapper">
-        <!-- ------ Адрес ------ -->
-        <section class="footer__contacts contacts">
-          <h2 class="visually-hidden">Наш адрес.</h2>
-          <div class="contacts__address">
-            <p class="contacts__invitation">
-              Приглашаем<br>
-              к сотрудничеству<br>
-              дилеров
-            </p>
-            <p class="contacts__information">
-              ул. Большая<br>
-              Конюшенная, д. 19/8<br>
-              Санкт-Петербург
-            </p>
-          </div>
-          <!-- ------ Карта ------ -->
-          <h2 class="visually-hidden">Найти нас на карте.</h2>
-          <div class="contacts__map">
-            <!-- Здесь будет карта -->
-          </div>
-        </section>
+      <!-- ------ Адрес ------ -->
+      <section class="footer__contacts contacts">
+        <h2 class="visually-hidden">Наш адрес.</h2>
+        <div class="contacts__address">
+          <p class="contacts__invitation">
+            Приглашаем<br>
+            к сотрудничеству<br>
+            дилеров
+          </p>
+          <p class="contacts__information">
+            ул. Большая<br>
+            Конюшенная, д. 19/8<br>
+            Санкт-Петербург
+          </p>
+        </div>
+        <!-- ------ Карта ------ -->
+        <h2 class="visually-hidden">Найти нас на карте.</h2>
+        <div class="contacts__map">
+          <!-- Здесь будет карта -->
+        </div>
+      </section>
 
+      <div class="footer__wrapper">
         <div class="footer__logo">
           <a class="footer__logo-link" href="index.html">
             <img src="img/logos/logo-simple-title.svg" alt="Кэт энерджи.">
           </a>
         </div>
-
         <!-- ------ Соцсети ------ -->
         <section class="footer__social">
           <h2 class="visually-hidden">Мы в соцсетях.</h2>
@@ -197,12 +198,12 @@
         </section>
 
         <!-- ------ Copyright ------ -->
-        <section class="footer__copyright copyright">
+        <section class="footer__copyright">
           <h2 class="visually-hidden">Разработано.</h2>
-          <a class="copyright__link-title" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="copyright__link-logo" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg class="copyright__logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
-              <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+          <a class="footer__copyright-title" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="footer__copyright-logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0Zm11.6 25L13.5 31.96 1.77 25.02v-10.1l11.68 6.93.02 1.25-8.02-4.75v1.23l8.04 4.8.02 1.3-8.05-4.76v1.22l8.04 4.81 8.12-4.83V16.9l3.62-2.15v10.26Zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.23 6.04 3.57-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23 1.94 1.13-1.98 1.19L1.8 13.58l11.63-6.96 11.8 6.83Zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5 1.76 25.23 3v9.24Z" fill="#666"/>
             </svg>
           </a>
         </section>
