--- a/source/index.html
+++ b/source/index.html
@@ -149,7 +149,7 @@
       <!-- ------ Адрес ------ -->
       <section class="footer__contacts contacts">
         <h2 class="visually-hidden">Наш адрес.</h2>
-        <div class="contacts__address">
+        <div class="contacts__address contacts__address--main">
           <p class="contacts__invitation">
             Приглашаем<br>
             к сотрудничеству<br>
