Добавляет сетки на главную страницу

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,11 +11,9 @@
       <!-- ------ Навигация ------ -->
       <nav class="header__navigation navigation">
         <a class="navigation__logo" href="index.html">
-          <img src="img/logos/logo-simple-picture.svg" alt="Кэт энерджи." width="33" height="37">
+          <span class="visually-hidden">Кэт энерджи.</span>
         </a>
-        <a class="navigation__logo-title" href="index.html">
-          <img src="img/logos/logo-simple-title.svg" alt="">
-        </a>
+        <a class="navigation__logo-title" href="index.html"></a>
         <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -231,7 +229,7 @@
         <!-- --- Дополнительные товары --- -->
         <h2 class="catalog__title-secondary">Дополнительные товары</h2>
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--additional">
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Сахарозаменитель</h3>
           </a>
@@ -246,7 +244,7 @@
         </article>
 
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--additional">
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Питьевая вода</h3>
           </a>
@@ -261,7 +259,7 @@
         </article>
 
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--additional">
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Молоко</h3>
           </a>
@@ -276,7 +274,7 @@
         </article>
 
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--additional">
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Витамины</h3>
           </a>
@@ -307,13 +305,13 @@
         <h2 class="visually-hidden">Наш адрес.</h2>
         <div class="contacts__address">
           <p class="contacts__invitation">
-            Приглашаем<br>
-            к сотрудничеству<br>
+            Приглашаем
+            к сотрудничеству
             дилеров
           </p>
           <p class="contacts__information">
-            ул. Большая<br>
-            Конюшенная, д. 19/8<br>
+            ул. Большая
+            Конюшенная, д. 19/8
             Санкт-Петербург
           </p>
         </div>
