--- a/source/form.html
+++ b/source/form.html
@@ -12,11 +12,9 @@
       <!-- ------ Навигация ------ -->
       <nav class="header__navigation navigation">
         <a class="navigation__logo" href="index.html">
-          <img src="img/logos/logo-simple-picture.svg" alt="Кэт энерджи." width="33" height="37">
+          <span class="visually-hidden">Кэт энерджи.</span>
         </a>
-        <a class="navigation__logo-title" href="index.html">
-          <img src="img/logos/logo-simple-title.svg" alt="">
-        </a>
+        <a class="navigation__logo-title" href="index.html"></a>
         <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -85,7 +83,7 @@
           </fieldset>
 
           <fieldset class="form__fieldset form__fieldset--contacts">
-            <legend class="form__legend page-title-secondary">Контактные данные<br>(владельца кота)</legend>
+            <legend class="form__legend">Контактные данные<br>(владельца кота)</legend>
             <div class="form__field-group">
               <label class="form__label" for="email">E-mail:*</label>
               <input class="form__text form__text--email" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
@@ -97,12 +95,12 @@
           </fieldset>
 
           <fieldset class="form__fieldset form__fieldset--comment">
-            <legend class="form__legend page-title-secondary">Комментарий</legend>
+            <legend class="form__legend">Комментарий</legend>
             <textarea class="form__textarea" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
           </fieldset>
 
           <fieldset class="form__fieldset form__fieldset--addition">
-            <legend class="form__legend page-title-secondary">Дополнительно</legend>
+            <legend class="form__legend">Дополнительно</legend>
             <ul class="form__list">
               <li class="form__item">
                 <label class="form__label">
@@ -147,13 +145,13 @@
         <h2 class="visually-hidden">Наш адрес.</h2>
         <div class="contacts__address">
           <p class="contacts__invitation">
-            Приглашаем<br>
-            к сотрудничеству<br>
+            Приглашаем
+            к сотрудничеству
             дилеров
           </p>
           <p class="contacts__information">
-            ул. Большая<br>
-            Конюшенная, д. 19/8<br>
+            ул. Большая
+            Конюшенная, д. 19/8
             Санкт-Петербург
           </p>
         </div>
