Добавляет сетку на страницу формы

--- a/source/form.html
+++ b/source/form.html
@@ -83,7 +83,7 @@
           </fieldset>
 
           <fieldset class="form__fieldset form__fieldset--contacts">
-            <legend class="form__legend">Контактные данные<br>(владельца кота)</legend>
+            <legend class="form__legend">Контактные данные (владельца кота)</legend>
             <div class="form__field-group">
               <label class="form__label" for="email">E-mail:*</label>
               <input class="form__text form__text--email" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
@@ -129,9 +129,7 @@
             </ul>
           </fieldset>
 
-          <div class="form__button">
-            <button class="button" type="submit">Отправить заявку</button>
-          </div>
+          <button class="form__button button" type="submit">Отправить заявку</button>
 
           <p class="form__explanation">* — Обязательные поля</p>
         </form>
