Добавляет сетки на страницу каталога. + ошибка добавления миксина

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
     <!-- ------ Главная часть ------ -->
     <main class="main">
       <section class="catalog">
-        <h1 class="main__title">Каталог продукции</h1>
+        <h1 class="main__title catalog__title">Каталог продукции</h1>
 
         <!-- Карточка товара -->
         <article class="catalog__product-card">
@@ -219,82 +219,81 @@
           <a class="catalog__button button" href="#">Заказать</a>
         </article>
 
-        <a class="catalog__show-more-link" href="#">
-          <p class="catalog__show-more-title">Показать еще 100500 товаров</p>
-          <p class="catalog__show-more-addition">На самом деле вкусов гораздо больше!</p>
-        </a>
+        <div class="catalog__more-goods">
+          <a class="catalog__show-more-link" href="#">
+            <p class="catalog__show-more-title">Показать еще 100500 товаров</p>
+            <p class="catalog__show-more-addition">На самом деле вкусов гораздо больше!</p>
+          </a>
+          <a class="catalog__show-all button button--secondary" href="#">Показать все</a>
+        </div>
 
-        <a class="catalog__button button button--secondary" href="#">Показать все</a>
 
         <!-- --- Дополнительные товары --- -->
-        <h2 class="catalog__title-secondary">Дополнительные товары</h2>
-        <!-- Карточка товара -->
-        <article class="catalog__product-card catalog__product-card--additional">
-          <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Сахарозаменитель</h3>
-          </a>
-          <table class="catalog__product-information">
-            <caption class="visually-hidden">Информация о товаре</caption>
-            <tr>
-              <th>1 упаковка (100 г)</th>
-              <td>200 Р.</td>
-            </tr>
-          </table>
-          <a class="catalog__button button" href="#">Заказать</a>
-        </article>
+        <div class="catalog__additional-goods">
+          <h2 class="catalog__title-secondary">Дополнительные товары</h2>
 
-        <!-- Карточка товара -->
-        <article class="catalog__product-card catalog__product-card--additional">
-          <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Питьевая вода</h3>
-          </a>
-          <table class="catalog__product-information">
-            <caption class="visually-hidden">Информация о товаре</caption>
-            <tr>
-              <th>5 литров</th>
-              <td>50 Р.</td>
-            </tr>
-          </table>
-          <a class="catalog__button button" href="#">Заказать</a>
-        </article>
+          <article class="catalog__product-card catalog__product-card--additional">
+            <a class="catalog__title-link" href="#">
+              <h3 class="catalog__product-title">Сахарозаменитель</h3>
+            </a>
+            <table class="catalog__product-information">
+              <caption class="visually-hidden">Информация о товаре</caption>
+              <tr>
+                <th>1 упаковка (100 г)</th>
+                <td>200 Р.</td>
+              </tr>
+            </table>
+            <a class="catalog__button button" href="#">Заказать</a>
+          </article>
 
-        <!-- Карточка товара -->
-        <article class="catalog__product-card catalog__product-card--additional">
-          <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Молоко</h3>
-          </a>
-          <table class="catalog__product-information">
-            <caption class="visually-hidden">Информация о товаре</caption>
-            <tr>
-              <th>1 литр</th>
-              <td>100 Р.</td>
-            </tr>
-          </table>
-          <a class="catalog__button button" href="#">Заказать</a>
-        </article>
+          <article class="catalog__product-card catalog__product-card--additional">
+            <a class="catalog__title-link" href="#">
+              <h3 class="catalog__product-title">Питьевая вода</h3>
+            </a>
+            <table class="catalog__product-information">
+              <caption class="visually-hidden">Информация о товаре</caption>
+              <tr>
+                <th>5 литров</th>
+                <td>50 Р.</td>
+              </tr>
+            </table>
+            <a class="catalog__button button" href="#">Заказать</a>
+          </article>
 
-        <!-- Карточка товара -->
-        <article class="catalog__product-card catalog__product-card--additional">
-          <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Витамины</h3>
-          </a>
-          <table class="catalog__product-information">
-            <caption class="visually-hidden">Информация о товаре</caption>
-            <tr>
-              <th>1 упаковка (30 г)</th>
-              <td>300 Р.</td>
-            </tr>
-          </table>
-          <a class="catalog__button button" href="#">Заказать</a>
-        </article>
+          <article class="catalog__product-card catalog__product-card--additional">
+            <a class="catalog__title-link" href="#">
+              <h3 class="catalog__product-title">Молоко</h3>
+            </a>
+            <table class="catalog__product-information">
+              <caption class="visually-hidden">Информация о товаре</caption>
+              <tr>
+                <th>1 литр</th>
+                <td>100 Р.</td>
+              </tr>
+            </table>
+            <a class="catalog__button button" href="#">Заказать</a>
+          </article>
 
-        <p class="catalog__gift-offer">
-          <span class="catalog__gift-text">
-            Закажите все
-            и получите чехол для
-            кота в подарок!
-          </span>
-        </p>
+          <article class="catalog__product-card catalog__product-card--additional">
+            <a class="catalog__title-link" href="#">
+              <h3 class="catalog__product-title">Витамины</h3>
+            </a>
+            <table class="catalog__product-information">
+              <caption class="visually-hidden">Информация о товаре</caption>
+              <tr>
+                <th>1 упаковка (30 г)</th>
+                <td>300 Р.</td>
+              </tr>
+            </table>
+            <a class="catalog__button button" href="#">Заказать</a>
+          </article>
+
+          <p class="catalog__gift-offer">
+              Закажите все
+              и получите чехол для
+              кота в подарок!
+          </p>
+        </div>
       </section>
     </main>
 
