--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <!-- ------ Header ------  -->
     <header class="header header--main">
       <!-- ------ Навигация ------ -->
-      <nav class="header__navigation navigation">
+      <nav class="header__navigation navigation navigation--closed navigation--nojs">
         <a class="navigation__logo">
           <span class="visually-hidden">Кэт энерджи.</span>
         </a>
@@ -19,14 +19,14 @@
         </button>
 
         <ul class="navigation__list">
-          <li class="navigation__item navigation__item--current">
-            <a class="navigation__link navigation__link--main">Главная</a>
+          <li class="navigation__item navigation__item--main navigation__item--current">
+            <a class="navigation__link">Главная</a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__link navigation__link--main" href="catalog.html">Каталог продукции</a>
+          <li class="navigation__item navigation__item--main">
+            <a class="navigation__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__link navigation__link--main" href="form.html">Подбор программы</a>
+          <li class="navigation__item navigation__item--main">
+            <a class="navigation__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -57,7 +57,7 @@
                 Energy Slim поможет вашему
                 питомцу сбросить лишний вес.
               </p>
-              <a class="program-kinds__link" href="#">Каталог Slim</a>
+              <a class="program-kinds__link" href="catalog.html">Каталог Slim</a>
             </li>
 
             <li class="program-kinds__item program-kinds__item--weight-gain">
@@ -69,7 +69,7 @@
                 вашему коту нарастить
                 необходимые мышцы!
               </p>
-              <a class="program-kinds__link" href="#">Каталог Pro</a>
+              <a class="program-kinds__link" href="catalog.html">Каталог Pro</a>
             </li>
           </ul>
         </div>
@@ -166,7 +166,13 @@
         <!-- ------ Карта ------ -->
         <h2 class="visually-hidden">Найти нас на карте.</h2>
         <div class="contacts__map">
-          <!-- Здесь будет карта -->
+          <!--<iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+            width="100%"
+            height="362"
+            allowfullscreen
+            title="Офис компании по адресу Большая Конюшенная улица, 19/8, Санкт-Петербург">
+          </iframe>-->
         </div>
       </section>
 
@@ -206,14 +212,18 @@
         <!-- ------ Copyright ------ -->
         <section class="footer__copyright">
           <h2 class="visually-hidden">Разработано.</h2>
-          <a class="footer__copyright-title" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="footer__copyright-logo" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="footer__copyright-title">HTML Academy</span>
+
+            <svg class="footer__copyright-logo" width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0Zm11.6 25L13.5 31.96 1.77 25.02v-10.1l11.68 6.93.02 1.25-8.02-4.75v1.23l8.04 4.8.02 1.3-8.05-4.76v1.22l8.04 4.81 8.12-4.83V16.9l3.62-2.15v10.26Zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.23 6.04 3.57-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23 1.94 1.13-1.98 1.19L1.8 13.58l11.63-6.96 11.8 6.83Zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5 1.76 25.23 3v9.24Z" fill="#666"/>
             </svg>
           </a>
         </section>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
+    <script src="./js/map.js"></script>
   </body>
 </html>
