--- a/source/index.html
+++ b/source/index.html
@@ -126,7 +126,10 @@
               <dd class="use-case__details-number">60 дней</dd>
             </dl>
           </div>
-          <p class="use-case__total-cost">Затраты на питание: 15 000 руб.</p>
+          <dl class="use-case__total-cost">
+            <dt>Затраты на питание:</dt>
+            <dd>15 000 руб.</dd>
+          </dl>
 
           <!-- Слайдер с результатами -->
           <div class="use-case__slider-container results-slider">
@@ -165,15 +168,7 @@
         </div>
         <!-- ------ Карта ------ -->
         <h2 class="visually-hidden">Найти нас на карте.</h2>
-        <div class="contacts__map">
-          <!--<iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
-            width="100%"
-            height="362"
-            allowfullscreen
-            title="Офис компании по адресу Большая Конюшенная улица, 19/8, Санкт-Петербург">
-          </iframe>-->
-        </div>
+        <div class="contacts__map" id="map"></div>
       </section>
 
       <div class="footer__wrapper">
@@ -224,6 +219,7 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=9e975622-bb8b-471a-b0bf-69f718d3034d&lang=ru_RU"></script>
     <script src="./js/map.js"></script>
   </body>
 </html>
