Добавляет декоративные элементы и состоянияна внутренние страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-1.png" alt="" width="68" height="86">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy pro 500 г</h3>
+            <h3 class="catalog__product-title">Cat Energy pro 500&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -69,7 +69,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-2.png" alt="" width="84" height="100">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy pro 1000 г</h3>
+            <h3 class="catalog__product-title">Cat Energy pro 1000&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -95,7 +95,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-3.png" alt="" width="68" height="86">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy pro 500 г</h3>
+            <h3 class="catalog__product-title">Cat Energy pro 500&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -121,7 +121,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-4.png" alt="" width="84" height="100">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy pro 1000 г</h3>
+            <h3 class="catalog__product-title">Cat Energy pro 1000&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -147,7 +147,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-5.png" alt="" width="68" height="86">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy slim 500 г</h3>
+            <h3 class="catalog__product-title">Cat Energy slim 500&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -173,7 +173,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-6.png" alt="" width="84" height="100">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy slim 1000 г</h3>
+            <h3 class="catalog__product-title">Cat Energy slim 1000&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -199,7 +199,7 @@
             <img class="catalog__product-image" src="img/catalog/catalog-7.png" alt="" width="68" height="86">
           </a>
           <a class="catalog__title-link" href="#">
-            <h3 class="catalog__product-title">Cat Energy slim 500 г</h3>
+            <h3 class="catalog__product-title">Cat Energy slim 500&nbsp;г</h3>
           </a>
           <table class="catalog__product-information">
             <caption class="visually-hidden">Информация о товаре</caption>
@@ -369,5 +369,7 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=9e975622-bb8b-471a-b0bf-69f718d3034d&lang=ru_RU"></script>
+    <script src="./js/map.js"></script>
   </body>
 </html>
