Добавляет адаптивную графику и фавиконки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
@@ -40,7 +44,10 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-1.png" alt="" width="68" height="86">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-1-tablet.png 1x, img/catalog/catalog-1-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-1.png" srcset="img/catalog/catalog-1@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy pro 500&nbsp;г</h3>
@@ -66,7 +73,11 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-2.png" alt="" width="84" height="100">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.png 1x, img/catalog/catalog-2-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.png 1x, img/catalog/catalog-2-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-2.png" srcset="img/catalog/catalog-2@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy pro 1000&nbsp;г</h3>
@@ -92,7 +103,10 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-3.png" alt="" width="68" height="86">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.png 1x, img/catalog/catalog-3-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-3.png" srcset="img/catalog/catalog-3@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy pro 500&nbsp;г</h3>
@@ -118,7 +132,11 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-4.png" alt="" width="84" height="100">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/catalog/catalog-4-desktop.png 1x, img/catalog/catalog-4-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-4-tablet.png 1x, img/catalog/catalog-4-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-4.png" srcset="img/catalog/catalog-4@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy pro 1000&nbsp;г</h3>
@@ -144,7 +162,10 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-5.png" alt="" width="68" height="86">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-5-tablet.png 1x, img/catalog/catalog-5-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-5.png" srcset="img/catalog/catalog-5@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy slim 500&nbsp;г</h3>
@@ -170,7 +191,11 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-6.png" alt="" width="84" height="100">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/catalog/catalog-6-desktop.png 1x, img/catalog/catalog-6-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-6-tablet.png 1x, img/catalog/catalog-6-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-6.png" srcset="img/catalog/catalog-6@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy slim 1000&nbsp;г</h3>
@@ -196,7 +221,10 @@
         <!-- Карточка товара -->
         <article class="catalog__product-card">
           <a class="catalog__image-link" href="#">
-            <img class="catalog__product-image" src="img/catalog/catalog-7.png" alt="" width="68" height="86">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/catalog/catalog-7-tablet.png 1x, img/catalog/catalog-7-tablet@2x.png 2x">
+              <img class="catalog__product-image" src="img/catalog/catalog-7.png" srcset="img/catalog/catalog-7@2x.png 2x" alt="">
+            </picture>
           </a>
           <a class="catalog__title-link" href="#">
             <h3 class="catalog__product-title">Cat Energy slim 500&nbsp;г</h3>
