--- a/source/index.html
+++ b/source/index.html
@@ -102,7 +102,7 @@
             <li class="about-product__item about-product__item--result">
               Уже через месяц
               наслаждайтесь изменениями
-              к лучшему вашего питомца!
+              к лучшему <br>вашего питомца!
             </li>
           </ul>
         </div>
@@ -142,13 +142,19 @@
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/fat-skinny-cat.webp 1x, img/fat-skinny-cat@2x.webp 2x">
                 <source type="image/webp" srcset="img/cat-fat.webp 1x, img/cat-fat@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/fat-skinny-cat.png 1x, img/fat-skinny-cat@2x.png 2x">
-                <img class="use-case__image" src="img/cat-fat.png" srcset="img/cat-fat@2x.png 2x" width="280" height="232" alt="Фото кота Бориса до.">
+                <img class="slider__image" src="img/cat-fat.png" srcset="img/cat-fat@2x.png 2x" width="280" height="232" alt="Фото кота Бориса до.">
               </picture>
             </div>
-            <div class="use-case__controls-container">
-              <span class="use-case__control-label">Было</span>
-              <input class="use-case__slider results-slider__slider" type="range" min="0" max="100" value="0">
-              <span class="use-case__control-label">Стало</span>
+            <div class="slider__controls-container">
+              <button class="slider__control-button" type="button">Было</button>
+              <input class="slider__range-control" type="range" min="0" max="100" value="50" aria-label="Слайдер состояния кота">
+              <div class="slider__toggle-control">
+                <input class="slider__radio visually-hidden" id="begin-toggle" type="radio" name="slider-toggle" value="begin" aria-label="Вид кота до" checked>
+                <label class="slider__toggle-label" for="begin-toggle"></label>
+                <input class="slider__radio visually-hidden" id="end-toggle" type="radio" name="slider-toggle" value="end" aria-label="Вид кота после">
+                <label class="slider__toggle-label" for="end-toggle"></label>
+              </div>
+              <button class="slider__control-button" type="button">Стало</button>
             </div>
           </div>
         </div>
@@ -163,13 +169,13 @@
         <div class="contacts__address contacts__address--main">
           <p class="contacts__invitation">
             Приглашаем
-            к сотрудничеству
+            к&nbsp;сотрудничеству
             дилеров!
           </p>
           <p class="contacts__information">
             ул. Большая
             Конюшенная, д. 19/8
-            Санкт-Петербург
+            <span class="contacts__city">Санкт-Петербург</span>
           </p>
         </div>
         <!-- ------ Карта ------ -->
@@ -180,7 +186,7 @@
       <div class="footer__wrapper">
         <div class="footer__logo">
           <a class="footer__logo-link">
-            <img src="img/logos/logo-simple-title.svg" alt="Кэт энерджи.">
+            <img src="img/logos/logo-simple-title.svg" alt="Кэт энерджи." width="128" height="24">
           </a>
         </div>
         <!-- ------ Соцсети ------ -->
