--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,7 +71,7 @@
         </article>
 
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--large">
           <a class="catalog__image-link" href="#">
             <picture>
               <source media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.png 1x, img/catalog/catalog-2-desktop@2x.png 2x">
@@ -130,7 +130,7 @@
         </article>
 
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--large">
           <a class="catalog__image-link" href="#">
             <picture>
               <source media="(min-width: 1440px)" srcset="img/catalog/catalog-4-desktop.png 1x, img/catalog/catalog-4-desktop@2x.png 2x">
@@ -189,7 +189,7 @@
         </article>
 
         <!-- Карточка товара -->
-        <article class="catalog__product-card">
+        <article class="catalog__product-card catalog__product-card--large">
           <a class="catalog__image-link" href="#">
             <picture>
               <source media="(min-width: 1440px)" srcset="img/catalog/catalog-6-desktop.png 1x, img/catalog/catalog-6-desktop@2x.png 2x">
@@ -318,7 +318,7 @@
 
           <p class="catalog__gift-offer">
               Закажите все
-              и получите чехол для
+              и&nbsp;получите чехол для
               кота в подарок!
           </p>
         </div>
@@ -333,13 +333,13 @@
         <div class="contacts__address">
           <p class="contacts__invitation">
             Приглашаем
-            к сотрудничеству
-            дилеров
+            к&nbsp;сотрудничеству
+            дилеров!
           </p>
           <p class="contacts__information">
             ул. Большая
             Конюшенная, д. 19/8
-            Санкт-Петербург
+            <span class="contacts__city">Санкт-Петербург</span>
           </p>
         </div>
         <!-- ------ Карта ------ -->
@@ -352,7 +352,7 @@
       <div class="footer__wrapper">
         <div class="footer__logo">
           <a class="footer__logo-link" href="index.html">
-            <img src="img/logos/logo-simple-title.svg" alt="Кэт энерджи.">
+            <img src="img/logos/logo-simple-title.svg" alt="Кэт энерджи." width="128" height="24">
           </a>
         </div>
         <!-- ------ Соцсети ------ -->
