--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
+    <link rel="preload" href="fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
@@ -9,6 +12,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
+
   <body class="page__body">
     <!-- ------ Header ------  -->
     <header class="header header--main">
@@ -136,7 +140,7 @@
           </dl>
 
           <!-- Слайдер с результатами -->
-          <div class="use-case__slider-container">
+          <div class="slider use-case__slider-container">
             <div class="use-case__image-container">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/fat-skinny-cat.webp 1x, img/fat-skinny-cat@2x.webp 2x">
